Version 2.02.99 - 
===================================
  Fix creation and removal of clustered snapshot.
  Fix clvmd caching of metadata when suspending inactive volumes.
  Find newest timestamp of merged config files.
  Fix assignment order for vg fid for lvm1 and pool format.
  Fix memleak in dmeventd thin plugin in device list obtaining err path.
  Add explicit message about unsupported pvmove for thin/thinpool volumes.
  Fix lvmetad error path in lvmetad_vg_lookup() for null vgname.
  Fix clvmd _cluster_request() return code in memory fail path.
  Add writemostly/writebehind support for RAID1
  Add lv_change_activate() for common activation code in vg/lvchange.
  Revert change that allowed identical table reload for RAID.
  New lvchange arg, '--syncaction' allows scrubbing of RAID LVs.
  Improve RAID kernel status retrieval to include sync_action/mismatch_cnt.
  Add external origin support for lvcreate.
  Improve lvcreate, lvconvert and lvm man pages.
  Clean up format1 PV write to remove a need for an orphan VG for it to pass.
  Fix vgextend to not allow a PV with 0 MDAs to be used while already in a VG.
  Move update_pool_params() from /tools to /lib for better reuse.
  Give precedence to EMC power2 devices with duplicate PVIDs.
  Add --validate option to lvm dumpconfig to validate current config on demand.
  Add --ignoreadvanced and --ignoreunsupported switch to lvm dumpconfig.
  Add --withcomments and --withversions switch to lvm dumpconfig.
  Add --type {current|default|missing|new} and --atversion to lvm dumpconfig.
  Support automatic config validation and add 'config' section to lvm.conf.
  Add pvs -o ea_start,ea_size to report embedding area start and size.
  Add --embeddingareasize to pvcreate and vgconvert to create an embedding area.
  Add PV header extension: extension version, flags and embedding areas.
  Initial support for lvconvert of thin external origin.
  Add _lv_remove_segs_using_this_lv() for removal of dependent lvs.